Fixing New story button center alignment

--- a/static/base-style.css
+++ b/static/base-style.css
@@ -70,6 +70,7 @@ body {
     -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
     border-radius: 20px;
+    padding: 9px;
 }
 
 #new-story a {
